k8s/not-in-use/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order
  labels:
    name: order
