k8s/not-in-use/orderflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: order
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: order-order-cors@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: order.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
