k8s/not-in-use/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(\`traefik.bilarn.com\`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
